# better-enum-cpp

./: CMakeLists.txt  Makefile  README.md  gcovr.sh
include/better-enum/: better-enum.h  macros.h  macros_utility.h
test/: better_enum_benchmark.cc  better_enum_test.cc  hello_world_benchmark.cc  hello_world_test.cc  macros_urility_test.cc
test/data/: a.h  b.h
